--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-register": "^6.3.13",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
+    "deep-freeze": "0.0.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
