--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint -c .eslintrc .",
     "start": "node server.js",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "validate": "npm ls"
   },
   "repository": {
     "type": "git",
@@ -54,6 +55,7 @@
     "jsdom": "^5.6.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
+    "precommit-hook": "^3.0.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.7",
     "style-loader": "^0.12.3",
