--- a/package.json
+++ b/package.json
@@ -50,14 +50,15 @@
     "eslint-plugin-import": "^1.9.2",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
-    "expect": "^1.8.0",
+    "expect": "^1.20.2",
     "express": "^4.13.3",
+    "immutable": "^3.8.1",
     "jsdom": "^5.6.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
     "precommit-hook": "^3.0.0",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^0.14.8",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
