--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "precommit-hook": "^3.0.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.8",
+    "react-stub-context": "^0.7.0",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
